# jmoshi-ft

./: .gitignore  .pre-commit-config.yaml  README.md  generate.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: code-quality.yml
.ipynb_checkpoints/: README-ja-checkpoint.md  finetune-checkpoint.py
data/spokenwoz_sample/: README.md
data/spokenwoz_sample/text/: MUL0947.json  MUL1266.json  MUL1423.json  MUL2195.json  MUL3404.json  SNG0072.json  SNG0480.json  SNG0696.json  SNG1263.json  (+1 more)
ds_configs/: zero2-fp16-act_ckpt.json  zero3-fp16-act_ckpt.json  zero3-fp16-act_ckpt_cpu-off-load.json  zero3-fp16-warmlr-act_ckpt.json
examples/: finetune_accelerate.sh  finetune_mpi_accelerate.sh  generate_accelerate.sh
examples/.ipynb_checkpoints/: finetune_mpi-checkpoint.sh
gen_dialogue/: finetune_accelerate.sh  scripts.ipynb
gen_dialogue/notebooks/: anotation.ipynb  coqui-tts.ipynb  gemini-rag-to-coqui.ipynb  gen-audio-dialogue-coqui.ipynb  gen-text-dialogue-gemini.ipynb  gen-text-dialogue.ipynb  mfa.ipynb  requirements.sbv.txt  sbv.ipynb
models/: __init__.py  moshi_for_finetuning.py  moshi_for_generation.py  utils.py
processed_data/gen_dialogue/: train-001-of-001.parquet
processed_data/mfa/: train-001-of-001.parquet
processed_data/sbv/: train-001-of-001.parquet
processed_data/spokenwoz_sample/: train-001-of-001.parquet
tools/: clean_moshi.py  decode_tokens.py  init_moshi_for_ft.py  prepare_dataset.py  tokenize_audio.py  tokenize_text.py  zero_to_fp32.py
utils/: __init__.py  data.py  distributed_env.py
(+4 files in other folders)
